crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mornumber.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "zho",
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "TI060 (side A)",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "29-FEB-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "duration": "17:30-18:00",
        "type": "time_duration"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "so",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "dirty",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "soldier",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "aa3",
                  "pos": "x"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 4,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "so",
                  "type": "text"
                }
              ],
              "raw_text": "so",
              "span": {
                "end": 404,
                "start": 402
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "dirty",
                  "type": "text"
                }
              ],
              "raw_text": "dirty",
              "span": {
                "end": 410,
                "start": 405
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "soldier",
                  "type": "text"
                }
              ],
              "raw_text": "soldier",
              "span": {
                "end": 418,
                "start": 411
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "aa3",
                  "type": "text"
                }
              ],
              "raw_text": "aa3",
              "span": {
                "end": 422,
                "start": 419
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Put in ' for character content",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "so",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "dirty",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "soldiers",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "aa3",
                  "pos": "x"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 4,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "so",
                  "type": "text"
                }
              ],
              "raw_text": "so",
              "span": {
                "end": 587,
                "start": 585
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "dirty",
                  "type": "text"
                }
              ],
              "raw_text": "dirty",
              "span": {
                "end": 593,
                "start": 588
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "soldier's",
                  "type": "text"
                }
              ],
              "raw_text": "soldier's",
              "span": {
                "end": 603,
                "start": 594
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "aa3",
                  "type": "text"
                }
              ],
              "raw_text": "aa3",
              "span": {
                "end": 607,
                "start": 604
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "zho, eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
