crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__morpostclitic.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Courtney",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Tracy",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Rose",
            "role": "Investigator",
            "speaker_code": "INV"
          },
          {
            "name": "Tom",
            "role": "Father",
            "speaker_code": "FAT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "08-SEP-1992",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "she",
                  "pos": "pron"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Fin",
                      "Ind",
                      "Pres",
                      "S3"
                    ],
                    "lemma": "be",
                    "pos": "aux"
                  }
                ]
              },
              {
                "main": {
                  "features": [
                    "Part",
                    "Pres",
                    "S"
                  ],
                  "lemma": "run",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "quickly",
                  "pos": "adv"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "AUX"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "ADVMOD"
              },
              {
                "head": 3,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "she's",
                  "type": "text"
                }
              ],
              "raw_text": "she's",
              "span": {
                "end": 326,
                "start": 321
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "running",
                  "type": "text"
                }
              ],
              "raw_text": "running",
              "span": {
                "end": 334,
                "start": 327
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "quickly",
                  "type": "text"
                }
              ],
              "raw_text": "quickly",
              "span": {
                "end": 342,
                "start": 335
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "INV"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "08-SEP-1992",
      "code": "CHI",
      "id": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI"
      },
      "name": "Courtney",
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT"
      },
      "name": "Tom",
      "role": "Father"
    },
    "INV": {
      "birth_date": null,
      "code": "INV",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV"
      },
      "name": "Rose",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Tracy",
      "role": "Mother"
    }
  }
}
