crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mortranslation-continuation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "pid": "11312/c-00042910-1",
        "type": "pid"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Antoine",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Mathieu",
            "role": "Father",
            "speaker_code": "FAT"
          },
          {
            "name": "Christophe",
            "role": "Investigator",
            "speaker_code": "OBS"
          },
          {
            "name": "Anne_Aunt",
            "role": "Relative",
            "speaker_code": "AUN"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;01.23",
        "corpus": "Paris",
        "language": "fra",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "35;",
        "corpus": "Paris",
        "language": "fra",
        "role": "Father",
        "sex": "male",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "46;05.18",
        "corpus": "Paris",
        "language": "fra",
        "role": "Investigator",
        "sex": "male",
        "speaker": "OBS",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "32;00.28",
        "corpus": "Paris",
        "language": "fra",
        "role": "Relative",
        "sex": "female",
        "speaker": "AUN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "10-APR-2006",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "07-JUL-1978",
        "participant": "FAT",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "15-DEC-1960",
        "participant": "OBS",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "05-MAY-1975",
        "participant": "AUN",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "mor translation with continuation lines",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "03-JUN-2007",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "ah",
                  "pos": "intj"
                }
              },
              {
                "main": {
                  "lemma": "oui",
                  "pos": "intj"
                }
              },
              {
                "main": {
                  "lemma": "alors",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S1"
                  ],
                  "lemma": "moi",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S1"
                  ],
                  "lemma": "pouvoir",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "S"
                  ],
                  "lemma": "éteindre",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "dans",
                  "pos": "adp"
                }
              },
              {
                "main": {
                  "features": [
                    "Masc",
                    "Def",
                    "Art",
                    "Sing"
                  ],
                  "lemma": "le",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Masc"
                  ],
                  "lemma": "couloir",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "oui",
                  "pos": "intj"
                }
              },
              {
                "main": {
                  "lemma": "non",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S3"
                  ],
                  "lemma": "lui",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "aller",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "S"
                  ],
                  "lemma": "chercher",
                  "pos": "verb"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 5,
                "index": 1,
                "relation": "DISCOURSE"
              },
              {
                "head": 5,
                "index": 2,
                "relation": "DISCOURSE"
              },
              {
                "head": 5,
                "index": 3,
                "relation": "DISCOURSE"
              },
              {
                "head": 5,
                "index": 4,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 5,
                "relation": "ROOT"
              },
              {
                "head": 5,
                "index": 6,
                "relation": "XCOMP"
              },
              {
                "head": 9,
                "index": 7,
                "relation": "CASE"
              },
              {
                "head": 9,
                "index": 8,
                "relation": "DET"
              },
              {
                "head": 6,
                "index": 9,
                "relation": "OBL-MOD"
              },
              {
                "head": 13,
                "index": 10,
                "relation": "DISCOURSE"
              },
              {
                "head": 13,
                "index": 11,
                "relation": "DISCOURSE"
              },
              {
                "head": 13,
                "index": 12,
                "relation": "NSUBJ"
              },
              {
                "head": 6,
                "index": 13,
                "relation": "ADVCL"
              },
              {
                "head": 13,
                "index": 14,
                "relation": "XCOMP"
              },
              {
                "head": 5,
                "index": 15,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 354852,
            "start_ms": 350255
          },
          "content": [
            {
              "content": [
                {
                  "content": "ah",
                  "type": "text"
                }
              ],
              "raw_text": "ah",
              "span": {
                "end": 542,
                "start": 540
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "oui",
                  "type": "text"
                }
              ],
              "raw_text": "oui",
              "span": {
                "end": 546,
                "start": 543
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "alors",
                  "type": "text"
                }
              ],
              "raw_text": "alors",
              "span": {
                "end": 552,
                "start": 547
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "je",
                  "type": "text"
                }
              ],
              "raw_text": "je",
              "span": {
                "end": 555,
                "start": 553
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "peux",
                  "type": "text"
                }
              ],
              "raw_text": "peux",
              "span": {
                "end": 560,
                "start": 556
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "éteindre",
                  "type": "text"
                }
              ],
              "raw_text": "éteindre",
              "span": {
                "end": 570,
                "start": 561
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "dans",
                  "type": "text"
                }
              ],
              "raw_text": "dans",
              "span": {
                "end": 575,
                "start": 571
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "le",
                  "type": "text"
                }
              ],
              "raw_text": "le",
              "span": {
                "end": 578,
                "start": 576
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "couloir",
                  "type": "text"
                }
              ],
              "raw_text": "couloir",
              "span": {
                "end": 586,
                "start": 579
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "oui",
                  "type": "text"
                }
              ],
              "raw_text": "oui",
              "span": {
                "end": 590,
                "start": 587
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "non",
                  "type": "text"
                }
              ],
              "raw_text": "non",
              "span": {
                "end": 594,
                "start": 591
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "elle",
                  "type": "text"
                }
              ],
              "raw_text": "elle",
              "span": {
                "end": 599,
                "start": 595
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "va",
                  "type": "text"
                }
              ],
              "raw_text": "va",
              "span": {
                "end": 602,
                "start": 600
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "chercher",
                  "type": "text"
                }
              ],
              "raw_text": "chercher",
              "span": {
                "end": 611,
                "start": 603
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "xxx",
                  "type": "text"
                }
              ],
              "raw_text": "xxx",
              "span": {
                "end": 615,
                "start": 612
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "AUN"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "AUN": {
      "birth_date": "05-MAY-1975",
      "code": "AUN",
      "id": {
        "age": "32;00.28",
        "corpus": "Paris",
        "language": "fra",
        "role": "Relative",
        "sex": "female",
        "speaker": "AUN"
      },
      "name": "Anne_Aunt",
      "role": "Relative"
    },
    "CHI": {
      "birth_date": "10-APR-2006",
      "code": "CHI",
      "id": {
        "age": "1;01.23",
        "corpus": "Paris",
        "language": "fra",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Antoine",
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": "07-JUL-1978",
      "code": "FAT",
      "id": {
        "age": "35;",
        "corpus": "Paris",
        "language": "fra",
        "role": "Father",
        "sex": "male",
        "speaker": "FAT"
      },
      "name": "Mathieu",
      "role": "Father"
    },
    "OBS": {
      "birth_date": "15-DEC-1960",
      "code": "OBS",
      "id": {
        "age": "46;05.18",
        "corpus": "Paris",
        "language": "fra",
        "role": "Investigator",
        "sex": "male",
        "speaker": "OBS"
      },
      "name": "Christophe",
      "role": "Investigator"
    }
  }
}
